--- a/style.css
+++ b/style.css
@@ -1,36 +1,42 @@
+html{
+    font-size: 20px;
+    font-family: "Open Sans", sans-serif;
+}
+html {
+    background-color: #8a3f3f;
+}
 body {
+    width: 900px;
+    height: 700px;
+    margin: 0 auto;
+    background-color: #e9e9e9;
+    padding: 0 50px 50px 50px
+    border: 30px solid black;
+}
+head {
+    width: 900px;
+    margin: 0 auto;
+    background-color: #e9e9e9;
+    padding: 0 50px 50px 50px
+    border: 10px solid black;
+}
+title {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  h1 {
-    color: maroon;
-    font-size: 70px;
-  }
-  img {
-    max-width: 250px;
-  }
-  .main-container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .header {
-    width: auto;
-    border-bottom: 3pt solid maroon;
-    padding: 0px 100px;
-    margin-bottom: 100px;
-  }
-  .main-content {
-    display: flex;
-    justify-content: space-between;
-    max-width: 800px;
-  }
-  .main-content p {
-    font-size: 25px;
-    margin-left: 30px;
-  }
+    padding: 20px 0;
+    color: #000000;
+    text-shadow: 3px 3px 1px black;
+}
+h1 {
+    margin: 0;
+    padding: 20px 0;
+    color: #7a0404;
+}
+h2 {
+    margin: 0;
+    padding: 20px 0;
+    color: #000000;
+}
+img{
+    display: block;
+    margin: 0 auto;
+}
